Bug 1668493 - macOS 11.0 - Popup Menus separator lines have blue tint r=mstange

Slight color adjustment of the separator.

Differential Revision: https://phabricator.services.mozilla.com/D92273